[package]
name = "io_uring_bench"
version = "0.1.0"
edition = "2021"

[dependencies]
io-uring = "0.6"
mio = { version = "1", features = ["net", "os-poll"] }
tokio = { version = "1", features = ["full"] }
tokio-uring = { version = "0.5.0" }
slab = "0.4"
nix = "0.29.0"
parking_lot = "0.12.3"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
#opt-level = "z"
